Remove unused dmn fragment